Fix modals in dark mode

--- a/src/css/contributors-guide.css
+++ b/src/css/contributors-guide.css
@@ -11,7 +11,7 @@
 }
 
 .contributors-modal .modal-content {
-  background-color: #fefefe;
+  background-color: var(--feedback-modal-background);
   margin: 15% auto;
   padding: 20px;
   border: 1px solid #888;
